--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body{
   
 }
 
+.sub-title{
+  font-size: 32px;
+
+}
+
 /**
 *headerのスタイルシート
 */
@@ -27,4 +32,54 @@ body{
   color: #000;
   text-decoration: none;
   letter-spacing: 1px;
+}
+
+/*
+*Mainのスタイルシート
+*/
+
+.block-main{
+  text-align: center;
+  margin: 100px 0;
+}
+
+/*
+*profireのスタイルシート
+*/
+
+.item-rist{
+  width: 100%;
+  max-width: 348px;
+  margin: 0 auto;
+}
+
+.item-rist b{
+  display:block;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 20px 0 30px;
+}
+.item-rist p{
+  font-size: 15px;
+  line-height: normal;
+  text-align: left;
+}
+
+.icon-rist{
+  list-style: none;
+  width: 100%;
+  max-width:247px ;
+  margin:30px auto;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-rist li{
+  margin-right: 22px;
+}
+
+.icon-rist li:last-child{
+ margin-right: 0;
 }
