--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
   overflow: hidden;
 }
 
-.works-rist li{
+.works-list li{
   display: block;
   width: 100%;
   max-width: 348px;
@@ -126,14 +126,14 @@ body{
   font-size: 18px;
 }
 
-.works-list li link{
+.works-list li .link{
 display: flex;
 justify-content: left;
 align-items: left;
 margin-top: 15px;
 }
 
-.works-list li.link a{
+.works-list li .link a{
   background-color: rgb(226,226,226);
   padding: 5px 20px;
   margin-right: 10px;
@@ -218,7 +218,7 @@ margin-top: 15px;
   .works-list li{
     max-width: 100%;
     float: none;
-    margin: :0;
+    margin: 0;
     margin-bottom: 30px;
   }
   .works-list h3{
